--- a/package.json
+++ b/package.json
@@ -6,30 +6,53 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "db:generate": "drizzle-kit generate",
+    "db:generate": "drizzle-kit generate --config=./drizzle-dev.config.ts",
+    "db:generate-prod": "NODE_ENV=production drizzle-kit generate --config=./drizzle-prod.config.ts",
     "db:migrate": "tsx src/db/migrate.ts",
-    "db:seed": "tsx src/seed.ts",
+    "db:migrate-prod": "NODE_ENV=production tsx src/db/migrate.ts",
+    "db:push-prod": "NODE_ENV=production drizzle-kit push --config=./drizzle-prod.config.ts",
+    "db:push": "drizzle-kit push --config=./drizzle-dev.config.ts",
+    "db:seed": "tsx src/db/seed.ts",
+    "db:seed-prod": "NODE_ENV=production tsx src/db/seed.ts",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
     "@kinde/webhooks": "^1.0.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.5",
+    "@redux-devtools/extension": "^3.3.0",
     "@sentry/nextjs": "^8.43.0",
+    "@tanstack/react-query": "^5.62.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.1",
+    "drizzle-zod": "^0.6.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
